Fix missing color of flag

--- a/CTFd/themes/admin/static/css/style.css
+++ b/CTFd/themes/admin/static/css/style.css
@@ -113,6 +113,10 @@ pre {
     background-color: #fff;
 }
 
+.tab-pane pre{
+    color: #343a41;
+}
+
 .tab-pane.config-section {
     color: #ffffff;
     background-color: transparent;
